# ds-unidad-2-actividad-2-listasenlazadas-vale2430215

./: CMakeLists.txt  README.md  TramaBase.hpp  main.cpp
doc/html/: annotated.html  annotated_dup.js  class_lista_de_carga-members.html  class_lista_de_carga.html  class_lista_de_carga.js  class_rotor_de_mapeo-members.html  class_rotor_de_mapeo.html  class_rotor_de_mapeo.js  class_trama_base-members.html  class_trama_base.html  class_trama_base.js  class_trama_load-members.html  class_trama_load.html  class_trama_load.js  class_trama_map-members.html  class_trama_map.html  class_trama_map.js  classes.html  dir_031628900e1b971f837c5446af9719a1.html  dir_123e2838efd4051a39efeeb16826b818.html  dir_123e2838efd4051a39efeeb16826b818.js  dir_685680a811045dc53a7dba07cb1b0385.html  dir_685680a811045dc53a7dba07cb1b0385.js  dir_7d03136c68196a12467bbb7a2b9e0bb8.html  dir_9c0627d3f68b35e8cd6be754b6f3b22f.html  dir_d259d22474d3f7cbb3e85aadcf6d92c9.html  dir_d522931ffa1371640980b621734a4381.html  dir_d522931ffa1371640980b621734a4381.js  dir_df5471cc39be58f0d0cf599937c5b892.html  dir_f472fbcd976cd56b2d9baa5b2f74b005.html  dir_f472fbcd976cd56b2d9baa5b2f74b005.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  (+12 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  pages_10.js  pages_4.js  pages_6.js  pages_7.js  pages_9.js  pages_a.js  pages_b.js  pages_c.js  pages_d.js  pages_e.js  (+5 more)
